Moved the 'secret password' checkbox next to the password field and started making the session chooser dialogue similar to the rest of the buttons

--- a/theme.conf
+++ b/theme.conf
@@ -3,8 +3,8 @@ Background="Background.jpg"
 ; Must match the name of the image in the theme directory. Any standard image file format is allowed with transparency supported. (e.g. background.jpeg/illustration.GIF/Foto.png)
 ScaleImageCropped=true
 ; Whether the image should be cropped when scaled proportionally. Setting this to false will fit the whole image when scaled, possibly leaving white space. This can be exploited beautifully with illustrations. (Try it with "Illustration.svg")
-ScreenWidth=1440
-ScreenHeight=900
+ScreenWidth=1920
+ScreenHeight=1080
 ; Adjust to your resolution to help SDDM speed up on calculations
 
 # [Design Customizations]
@@ -23,7 +23,7 @@ FontSize=
 # [Locale Settings]
 Locale=
 ; The time and date locale should usually be set in your system settings. Only hard set this if something is not working by default or you want a seperate locale setting in your login screen.
-HourFormat=
+HourFormat=hh:mm:ss
 ; Defaults to Locale.ShortFormat. Accepts "long" or a custom string like "hh:mm A". See http://doc.qt.io/qt-5/qml-qtqml-date.html
 DateFormat=
 ; Defaults to Locale.LongFormat. Accepts "short" or a custom string like "dddd, d 'of' MMMM". See http://doc.qt.io/qt-5/qml-qtqml-date.html
@@ -40,7 +40,7 @@ ForceHideCompletePassword=false
 
 # [Translations]
 ; SDDM may lack proper translation for every element. The keys beginning with Translate... default to SDDM translations. Please help translate SDDM as much as possible for your language: https://github.com/sddm/sddm/wiki/Localization. These are in order as they appear on screen.
-HeaderText="Welcome!"
+HeaderText=""
 ; Header can be empty to not display any greeting at all. Keep it short.
 TranslateUsernamePlaceholder=
 TranslatePasswordPlaceholder=
