--- a/theme.conf
+++ b/theme.conf
@@ -8,7 +8,8 @@ ScreenHeight=1080
 ; Adjust to your resolution to help SDDM speed up on calculations
 
 # [Design Customizations]
-ThemeColor="#444053"
+#ThemeColor="#444053"
+ThemeColor="#222031"
 AccentColor="#f14833"
 ; Colors can be HEX or named (e.g. red/blue/blanchedalmond). See http://doc.qt.io/qt-5/qml-color.html#svg-color-reference
 RoundCorners=20
